--- a/app/src/main/res/layout/recharge_page.xml
+++ b/app/src/main/res/layout/recharge_page.xml
@@ -131,6 +131,7 @@
         android:textSize="14sp" />
 
     <TextView
+        android:id="@+id/tv2_1tv"
         android:layout_width="160dp"
         android:layout_height="36dp"
         android:text="继续充值"
@@ -139,27 +140,30 @@
         android:layout_marginTop="27dp"
         android:textSize="16sp"
         android:gravity="center"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintTop_toBottomOf="@id/tv_tv6"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/tv2_tv"
         android:background="@drawable/shape_rectangle"/>
 
-            <com.example.myapplication.ImageTextLayoutView
-                android:id="@+id/tv2_tv"
-                android:layout_marginTop="27dp"
-                android:layout_width="160dp"
-                android:layout_height="36dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:background="@drawable/shape_rectangle2"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_tv6"
-                app:imageWidth="16dp"
-                app:imageWidth2="16dp"
-                app:imageHeight="17dp"
-                app:imageHeight2="14dp"
-                app:textSize="16sp"
-                app:textColor="@android:color/white"
-                app:textContent="查询余额"/>
+        <com.example.myapplication.ImageTextLayoutView
+            android:id="@+id/tv2_tv"
+            android:layout_marginTop="27dp"
+            android:layout_width="160dp"
+            android:layout_height="36dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:background="@drawable/shape_rectangle2"
+            app:layout_constraintLeft_toRightOf="@id/tv2_1tv"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_tv6"
+            app:imageWidth="16dp"
+            app:imageWidth2="16dp"
+            app:imageHeight="17dp"
+            app:imageHeight2="14dp"
+            app:textSize="16sp"
+            app:textColor="@android:color/white"
+            app:textContent="查询余额"/>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -628,7 +632,39 @@
             app:layout_constraintBottom_toBottomOf="@id/cl4_tv7"
             />
 
-        <androidx.recyclerview.widget.RecyclerView
+        <ImageView
+            android:id="@+id/im_card1"
+            android:layout_width="97dp"
+            android:layout_height="98dp"
+            android:src="@drawable/card1"
+            android:layout_marginTop="8dp"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
+            app:layout_constraintRight_toLeftOf="@id/im_card2"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
+        <ImageView
+            android:id="@+id/im_card2"
+            android:layout_width="97dp"
+            android:layout_height="98dp"
+            android:src="@drawable/card2"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
+            app:layout_constraintLeft_toRightOf="@id/im_card1"
+            app:layout_constraintRight_toLeftOf="@id/im_card3"
+            />
+        <ImageView
+            android:id="@+id/im_card3"
+            android:layout_width="97dp"
+            android:layout_height="98dp"
+            android:src="@drawable/card3"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
+            app:layout_constraintLeft_toRightOf="@id/im_card2"
+            app:layout_constraintRight_toRightOf="parent"
+            />
+
+        <!--<androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view3"
             android:layout_width="match_parent"
             android:layout_height="100dp"
@@ -636,7 +672,8 @@
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
             app:layout_constraintLeft_toLeftOf="parent"
-            />
+            />-->
+
     </androidx.constraintlayout.widget.ConstraintLayout>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view4"
@@ -648,7 +685,14 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="79dp"
+                app:layout_constraintTop_toBottomOf="@id/recycler_view4"
+                app:layout_constraintLeft_toLeftOf="parent"
+                />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
     </androidx.core.widget.NestedScrollView>
