--- a/app/src/main/res/layout/activity_flip_page.xml
+++ b/app/src/main/res/layout/activity_flip_page.xml
@@ -1,30 +1,37 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/fl">
 
     <ImageView
         android:id="@+id/beam"
-        android:layout_width="600dp"
+        android:layout_width="700dp"
         android:layout_height="match_parent"
-        android:src="@drawable/ic_flip_card_ray"
         android:layout_gravity="center" />
 
     <ImageView
         android:id="@+id/card"
         android:layout_width="97dp"
         android:layout_height="98dp"
-        android:src="@drawable/card1"
         android:layout_gravity="center"
         android:scaleType="fitCenter" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="bottom"
+        android:orientation="vertical">
+
+        <!-- FrameLayout的内容 -->
+
+    </LinearLayout>
     <ImageView
         android:id="@+id/bottom"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/cheer"
+        android:layout_height="190dp"
         android:layout_gravity="bottom"
-        android:scaleType="fitCenter" />
+        android:src="@drawable/cheer" />
 
 
 
