--- a/app/src/main/res/layout/recharge_page.xml
+++ b/app/src/main/res/layout/recharge_page.xml
@@ -6,13 +6,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#f4f4f4">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        >
+        <com.example.myapplication.CommonActionBar
+            android:id="@+id/tv_tv1"
+            android:layout_width="match_parent"
+            android:layout_height="39dp"
+            android:paddingRight="15dp"
+            android:textColor="#333333"
+            android:gravity="center"
+            app:imageWidth3="9dp"
+            app:imageHeight3="15dp"
+            app:title="评价"
+            app:textContent="aaaaa"
+            app:textSize="16sp"
+            app:back_src="@drawable/back"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+    </androidx.appcompat.widget.Toolbar>
 
 
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintLeft_toLeftOf="parent"
         >
 
@@ -25,13 +49,7 @@
 
             <!-- 在这里添加你的约束布局内容 -->
 
-            <View
-                android:id="@+id/view"
-                android:layout_width="match_parent"
-                android:layout_height="69dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                />
+
 
 
     <ImageView
@@ -42,7 +60,7 @@
         android:layout_marginLeft="87dp"
         android:layout_marginTop="23dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/view" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_tv2"
@@ -55,7 +73,7 @@
         android:textStyle="bold"
         android:layout_marginTop="20dp"
         app:layout_constraintLeft_toRightOf="@id/iv_iv1"
-        app:layout_constraintTop_toBottomOf="@id/view"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/tv_tv3"
@@ -675,27 +693,17 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 />
 
-
+            <View
+                android:id="@+id/view"
+                android:layout_width="match_parent"
+                android:layout_height="79dp"
+                app:layout_constraintTop_toBottomOf="@id/recycler_view4"
+                app:layout_constraintLeft_toLeftOf="parent"
+                />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
     </androidx.core.widget.NestedScrollView>
-    <com.example.myapplication.CommonActionBar
-        android:id="@+id/tv_tv1"
-        android:layout_width="match_parent"
-        android:layout_height="39dp"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:textColor="#333333"
-        android:gravity="center"
-        app:imageWidth3="9dp"
-        app:imageHeight3="15dp"
-        app:title="评价"
-        app:textContent="aaaaa"
-        app:textSize="16sp"
-        app:back_src="@drawable/back"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
