--- a/app/src/main/res/anim/up.xml
+++ b/app/src/main/res/anim/up.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="500">
+
     <translate
-        android:toYDelta="0"
-        android:fromYDelta="100%"
-        android:duration="400"/>
+        android:fromXDelta="100%p"
+        android:toXDelta="0"
+        />
+
+    <alpha
+        android:fromAlpha="0.0"
+        android:toAlpha="1.0"
+        />
 </set>
