--- a/app/src/main/res/layout/activity_flip_page.xml
+++ b/app/src/main/res/layout/activity_flip_page.xml
@@ -19,6 +19,8 @@
         android:id="@+id/card"
         android:layout_width="97dp"
         android:layout_height="98dp"
+        android:src="@drawable/winner"
+        android:transitionName="transition_image"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -27,6 +29,35 @@
 
     <ImageView
         android:id="@+id/card3"
+        android:layout_width="39dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="115dp"
+        app:layout_constraintTop_toBottomOf="@id/card"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:scaleType="fitCenter" />
+
+    <ImageView
+        android:id="@+id/card4"
+        android:layout_width="215dp"
+        android:layout_height="75dp"
+        app:layout_constraintTop_toBottomOf="@id/card"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:scaleType="fitCenter" />
+
+    <ImageView
+        android:id="@+id/card5"
+        android:layout_width="39dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="115dp"
+        app:layout_constraintTop_toBottomOf="@id/card"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:scaleType="fitCenter" />
+
+    <ImageView
+        android:id="@+id/card6"
         android:layout_width="39dp"
         android:layout_height="39dp"
         android:layout_marginTop="115dp"
