--- a/app/src/main/res/layout/flip_card.xml
+++ b/app/src/main/res/layout/flip_card.xml
@@ -82,6 +82,7 @@
             android:layout_height="98dp"
             android:layout_marginTop="8dp"
             android:src="@drawable/card1"
+            android:transitionName="transition_image"
             app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@id/card2"
