--- a/app/src/main/res/layout/activity_flip_page.xml
+++ b/app/src/main/res/layout/activity_flip_page.xml
@@ -39,29 +39,30 @@
 
     <ImageView
         android:id="@+id/card4"
-        android:layout_width="215dp"
-        android:layout_height="75dp"
-        app:layout_constraintTop_toBottomOf="@id/card"
+        android:layout_width="match_parent"
+        android:layout_height="84dp"
+        android:layout_marginBottom="122dp"
+        app:layout_constraintBottom_toTopOf="@id/card3"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:scaleType="fitCenter" />
 
     <ImageView
         android:id="@+id/card5"
-        android:layout_width="39dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="115dp"
-        app:layout_constraintTop_toBottomOf="@id/card"
+        android:layout_width="160dp"
+        android:layout_height="55dp"
+        android:layout_marginBottom="58dp"
+        app:layout_constraintBottom_toTopOf="@id/card3"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:scaleType="fitCenter" />
+         />
 
     <ImageView
         android:id="@+id/card6"
-        android:layout_width="39dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="115dp"
-        app:layout_constraintTop_toBottomOf="@id/card"
+        android:layout_width="104dp"
+        android:layout_height="12dp"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintBottom_toTopOf="@id/card3"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:scaleType="fitCenter" />
