--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,6 +20,8 @@
         <item name="android:backgroundDimEnabled">true</item> <!-- 背景是否半透明 -->
         <item name="android:statusBarColor">@android:color/transparent</item> <!-- 状态栏透明 -->
         <item name="android:windowAnimationStyle">@android:style/Animation.Translucent</item> <!-- activity窗口切换效果 -->
+        <item name="android:windowContentTransitions">true</item>
+
     </style>
 
 
