--- a/app/src/main/res/layout/recharge_page.xml
+++ b/app/src/main/res/layout/recharge_page.xml
@@ -300,8 +300,7 @@
             app:layout_constraintTop_toTopOf="@id/cl2_tv1"
             app:layout_constraintBottom_toBottomOf="@id/cl2_tv1"
             android:src="@drawable/arrow" />
-
-       <!-- <androidx.recyclerview.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -311,7 +310,8 @@
             app:layout_constraintBottom_toBottomOf="@id/cl2"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cl2_tv1"
-            app:layout_constraintVertical_bias="0.0" />-->
+            app:layout_constraintVertical_bias="0.0" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
