--- a/app/src/main/res/layout/first.xml
+++ b/app/src/main/res/layout/first.xml
@@ -16,8 +16,9 @@
         android:id="@+id/iv_image"
         android:layout_width="21dp"
         android:layout_height="24dp"
-        android:layout_marginTop="5dp"
-        app:layout_constraintVertical_chainStyle="spread"
+        android:layout_marginBottom="6dp"
+        app:layout_constraintVertical_weight="2"
+        app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -29,9 +30,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="充流量"
-        android:layout_marginTop="8dp"
         android:textColor="#333333"
         android:textSize="13sp"
+        app:layout_constraintVertical_weight="1"
         app:layout_constraintTop_toBottomOf="@id/iv_image"
         app:layout_constraintBottom_toTopOf="@id/name2"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -43,10 +44,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="流量告急速订购"
-        android:layout_marginTop="5dp"
         android:textColor="#999999"
         android:textSize="10sp"
-        android:layout_marginBottom="5dp"
+        app:layout_constraintVertical_weight="1"
         app:layout_constraintTop_toBottomOf="@id/name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
