--- a/app/src/main/res/layout/fourth.xml
+++ b/app/src/main/res/layout/fourth.xml
@@ -2,8 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_marginBottom="10dp"
-    android:layout_marginRight="10dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="4dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/shape_rectangle19"
     android:layout_height="wrap_content">
 
 
@@ -12,38 +14,45 @@
         android:layout_width="158dp"
         android:layout_height="158dp"
         android:src="@drawable/falls1"
-        android:scaleType="centerCrop"
+        android:scaleType="fitXY"
+        android:layout_marginBottom="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/name"/>
 
     <TextView
-            android:id="@+id/name"
-            android:layout_width="140dp"
-            android:layout_height="wrap_content"
-            android:text="电信关爱版-为老年人架桥"
-            android:textColor="#333333"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@id/iv_image"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/name"
+        android:layout_width="136dp"
+        android:layout_height="wrap_content"
+        android:text="加装【副卡】，一份套餐全家用"
+        android:textColor="#333333"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="9dp"
+        app:layout_constraintTop_toBottomOf="@id/iv_image"
+        app:layout_constraintBottom_toTopOf="@id/name2"
+        app:layout_constraintLeft_toLeftOf="parent"
             />
 
 
-            <TextView
-                android:id="@+id/name2"
-                android:layout_width="wrap_content"
-                android:layout_height="19dp"
-                android:layout_weight="1"
-                android:text="赠新人礼包"
-                android:gravity="center"
-                android:textColor="#ea5858"
-                android:textSize="11sp"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                app:layout_constraintTop_toBottomOf="@id/name"
-                app:layout_constraintLeft_toLeftOf="@id/name"
-                />
+        <TextView
+            android:id="@+id/name2"
+            android:layout_width="wrap_content"
+            android:layout_height="19dp"
+            android:layout_weight="1"
+            android:text="赠新人礼包"
+            android:gravity="center"
+            android:textColor="#ea5858"
+            android:textSize="11sp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="11dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            app:layout_constraintTop_toBottomOf="@id/name"
+            app:layout_constraintBottom_toTopOf="@id/name6"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
 
             <TextView
                 android:id="@+id/name3"
@@ -57,7 +66,7 @@
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
                 android:layout_marginLeft="5dp"
-                app:layout_constraintTop_toBottomOf="@id/name"
+                app:layout_constraintBottom_toBottomOf="@id/name2"
                 app:layout_constraintLeft_toRightOf="@id/name2"
                 />
 
@@ -67,11 +76,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#ea5858"
-                android:layout_marginLeft="10dp"
                 android:text="￥"
                 android:textSize="12sp"
-                app:layout_constraintBaseline_toBaselineOf="@id/name5"
-                app:layout_constraintTop_toBottomOf="@id/name2"
+                app:layout_constraintBaseline_toBaselineOf="@id/name6"
                 app:layout_constraintLeft_toLeftOf="@id/name"
                 />
 
@@ -83,7 +90,7 @@
                 android:text="10"
                 android:textStyle="bold"
                 android:textSize="18sp"
-                app:layout_constraintTop_toBottomOf="@id/name2"
+                app:layout_constraintBottom_toBottomOf="@id/name6"
                 app:layout_constraintLeft_toRightOf="@id/name4"
                 />
 
@@ -94,7 +101,8 @@
                 android:textColor="#ea5858"
                 android:text="/月"
                 android:textSize="12sp"
-                app:layout_constraintBaseline_toBaselineOf="@id/name5"
+                android:layout_marginBottom="12dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/name2"
                 app:layout_constraintLeft_toRightOf="@id/name5"
                 />
