--- a/app/src/main/res/layout/recharge_page.xml
+++ b/app/src/main/res/layout/recharge_page.xml
@@ -431,7 +431,7 @@
 
         <TextView
             android:layout_width="50dp"
-            android:layout_height="wrap_content"
+            android:layout_height="24dp"
             android:layout_marginTop="24dp"
             android:background="@drawable/shape_rectangle9"
             android:gravity="center"
@@ -444,9 +444,11 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="0.5dp"
             android:layout_marginTop="70dp"
             android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:color="#eeeeee"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:background="@drawable/shape_rectangle10"/>
@@ -521,7 +523,7 @@
 
         <TextView
             android:layout_width="50dp"
-            android:layout_height="wrap_content"
+            android:layout_height="24dp"
             android:layout_marginTop="94dp"
             android:background="@drawable/shape_rectangle9"
             android:gravity="center"
@@ -532,15 +534,18 @@
             app:layout_constraintLeft_toRightOf="@id/cl3_cl2"
             android:textSize="13sp" />
 
-        <TextView
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/tv2"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="0.5dp"
             android:layout_marginTop="140dp"
             android:layout_marginLeft="12dp"
+            android:color="#eeeeee"
+            android:layout_marginRight="12dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="@drawable/shape_rectangle10"/>
+            android:background="@drawable/shape_rectangle10"
+            />
 
         <TextView
             android:id="@+id/cl3_tv7"
@@ -651,7 +656,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:layout_marginLeft="10dp"
                 app:layout_constraintTop_toBottomOf="@id/cl6"
                 app:layout_constraintLeft_toLeftOf="parent"
                 />
