--- a/app/src/main/res/layout/scratch_card.xml
+++ b/app/src/main/res/layout/scratch_card.xml
@@ -80,8 +80,9 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="310dp"
-            android:layout_height="107dp"
+            android:id="@+id/close"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
@@ -117,5 +118,8 @@
 
 
 
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
