--- a/app/src/main/res/layout/second.xml
+++ b/app/src/main/res/layout/second.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="150dp"
     android:layout_marginRight="10dp"
     android:background="@drawable/shape_rectangle6"
     android:layout_height="70dp">
 
-    <LinearLayout
-        android:layout_width="150dp"
-        android:layout_height="70dp"
-        android:orientation="vertical">
+
         <TextView
             android:id="@+id/name3"
             android:layout_width="65dp"
@@ -17,20 +15,10 @@
             android:gravity="center"
             android:text="再得金豆可兑"
             android:textColor="#ffffff"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:textSize="9sp" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/shape_rectangle8"
-            android:orientation="horizontal">
-
-
-            <LinearLayout
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="10dp"
-                android:background="@drawable/image7">
 
 
                 <ImageView
@@ -38,37 +26,39 @@
                     android:layout_width="45dp"
                     android:layout_height="45dp"
                     android:src="@drawable/tengxun"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="13dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
                     />
-            </LinearLayout>
 
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:orientation="vertical">
+
+
 
                 <TextView
                     android:id="@+id/name"
                     android:layout_width="75dp"
-                    android:layout_height="29dp"
+                    android:layout_height="wrap_content"
                     android:gravity="left"
-                    android:text="腾讯视频会员
-周卡"
+                    android:text="腾讯视频会员周卡"
                     android:textColor="#333333"
                     android:textSize="12sp"
-
+                    android:layout_marginLeft="10dp"
+                    app:layout_constraintTop_toTopOf="@id/iv_image"
+                    app:layout_constraintLeft_toRightOf="@id/iv_image"
                     />
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+
 
                     <ImageView
+                        android:id="@+id/image"
                         android:layout_width="13dp"
                         android:layout_height="13dp"
                         android:layout_marginTop="2dp"
+                        android:layout_marginLeft="9dp"
+                        app:layout_constraintBottom_toBottomOf="@id/iv_image"
+                        app:layout_constraintLeft_toRightOf="@id/iv_image"
                         android:src="@drawable/bean" />
 
                     <TextView
@@ -78,13 +68,12 @@
                         android:text="1000金豆"
                         android:textColor="#f3bb62"
                         android:textSize="12sp"
-                        android:gravity="left"
+                        android:layout_marginLeft="2dp"
+                        app:layout_constraintBottom_toBottomOf="@id/iv_image"
+                        app:layout_constraintLeft_toRightOf="@id/image"
                         />
-                </LinearLayout>
-            </LinearLayout>
-        </LinearLayout>
-    </LinearLayout>
 
 
 
-</LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
