--- a/app/src/main/res/layout/view_group_custom_title_bar.xml
+++ b/app/src/main/res/layout/view_group_custom_title_bar.xml
@@ -10,7 +10,6 @@
         android:id="@+id/ivLeft"
         android:layout_width="9dp"
         android:layout_height="15dp"
-        android:layout_centerVertical="true"
         android:src="@drawable/back" />
 
     <TextView
@@ -18,8 +17,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:textSize="18sp"
+        android:textColor="#ffffff"
+        android:textSize="16sp"
         android:textStyle="bold" />
 
     <TextView
@@ -34,7 +33,7 @@
 
     <ImageView
         android:id="@+id/ivRight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="22dp"
+        android:layout_height="20dp"
         android:layout_alignParentRight="true" />
 </RelativeLayout>
